# Raytracer-4D

./: .gitignore  .replit  CMakeLists.txt  replit.nix
include/: hit.h  image.h  light.h  material.h  object.h  random.h  ray.h  vector.h
scripts/: run.bat  run.sh
src/: image.c  light.c  main.c  object.c  random.c  ray.c  vector.c
src/objects/: group.c  hyperplane.c  hypersphere.c
